Most of the adjustments to make things "work" with 16.0.4

--- a/conf/fail2ban/jails.conf
+++ b/conf/fail2ban/jails.conf
@@ -69,12 +69,15 @@ action   = iptables-allports[name=recidive]
 # So the notification is ommited. This will prevent message appearing in the mail.log that mail
 # can't be delivered to fail2ban@$HOSTNAME.
 
-[sasl]
-enabled  = true
+#[sasl]
+#enabled  = true
 
 [ssh]
 maxretry = 7
 bantime = 3600
 
-[ssh-ddos]
+#[ssh-ddos]
+#enabled  = true
+
+[sshd-ddos]
 enabled  = true
